--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Raleway', sans-serif;
+  background-color: #747fe7;
+  color: #747fe7 ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.quote-box {
+  background-color: #fff;
+  border-radius: 3px;
+  /* width: 450px; */
+  padding: 40px 50px;
+}
+
+.quote-text i {
+  font-size: 1.0em;
+  margin-right: 0.4em;
+  
+}
+
+.quote-text {
+  font-size: 1.75em;
+  text-align: center;
+  height: auto;
+  font-weight: 500;
+  width: 450px;
+}
+
+.quote-author {
+  text-align: right;
+  width: 450px;
+  height: auto;
+  padding-top: 20px;
+}
+
+.buttons {
+  width: 450px;
+  margin: auto;
+  display: block;
+  overflow: hidden;
+}
+
+.button {
+  display: flex;
+  border: none;
+  border-radius: 3px;
+  background-color: #747fe7;
+  color: #fff;
+  height: 25px;
+  outline: none;
+  margin-top: 30px;
+  padding: 8px 16px 8px 16px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-right: 10px;
 }
